@startuml
skinparam classAttributeIconSize 0

SmartDevices <|-- SmartPlug: is
SmartDevices <|-- SmartCamera: is
SmartDevices <|-- SmartLamp: is
SmartLamp <|-- SmartColorLamp: is

InitialTimeOperations <|.. ioOperations: usesStatically
Main <|.. ioOperations: usesStatically
Main <|. Commands: usesStatically
Main <|.. InitialTimeOperations: usesStatically
Commands <|.. ioOperations: usesStatically
Commands <|. CurrentTime: uses
InitialTimeOperations <|. CurrentTime: uses
InitialTimeOperations <|.. Commands: usesStatically
Main <|. CurrentTime: uses
Commands <|. SmartCamera: uses
Commands <|. SmartColorLamp: uses
Commands <|. SmartLamp: uses
Commands <|.. SmartDevices: uses
Main <|. SmartDevices: uses
Commands <|. SmartPlug: uses


class SmartDevices {
#name: String
#status: String
#switchTime: LocalDateTime
+getName(): String
+setName(String name): void
+getStatus(): String
+setStatus(String status): void
+getSwitchTime(): LocalDateTime
+setSwitchTime(LocalDateTime switchTime, LocalDateTime currentTime): void
}
class SmartColorLamp {
-colorCode: int
-colorFeature: boolean
-colorCodeStr: String
+<<create>>SmartColorLamp(String name)
+setColorCode(int colorCode, int brightness): void
+setColorFeature(boolean colorFeature, int brightness): void
+getColorFeature(): boolean
+getColorCodeStr(): String
+setColorCodeStr(String colorCodeStr, int brightness): void
}
class SmartLamp {
# kelvin: int
# brightness: int
+ <<create>>SmartLamp(String name)
+ getKelvin(): int
+ setKelvin(int kelvin, int brightness): void
+ getBrightness(): int
+ setBrightness(int brightness): void
}
class SmartCamera{
-megaBytesPerRecord: double
-usedStorage: double
-initialTime: LocalDateTime
-finalTime: LocalDateTime
+<<create>>SmartCamera(String name, double megaBytesPerRecord)
+getMegaBytesPerRecord(): double
+setMegaBytesPerRecord(double megaBytesPerRecord): void
+getUsedStorage(): double
+setUsedStorage(double usedStorage): void
+getInitialTime(): LocalDateTime
+setInitialTime(LocalDateTime initialTime): void
+getFinalTime(): LocalDateTime
+setFinalTime(LocalDateTime finalTime): void
}
class  SmartPlug{
-ampere: double
-plugin: boolean
-consumedEnergy: double
-initialTime: LocalDateTime
-finalTime: LocalDateTime
+<<create>>SmartPlug(String name)
+getAmpere(): double
+setAmpere(double ampere): void
+isPlugin(): boolean
+setPlugin(boolean plugin): void
+getConsumedEnergy(): double
+setConsumedEnergy(double consumedEnergy): void
+getInitialTime(): LocalDateTime
+setInitialTime(LocalDateTime initialTime): void
+getFinalTime(): LocalDateTime
+setFinalTime(LocalDateTime finalTime): void
}
class CurrentTime{
-time: LocalDateTime
+<<create>>CurrentTime(LocalDateTime time)
+getCurrentTime(): LocalDateTime
+setCurrentTime(LocalDateTime time): void
}
class InitialTimeOperations{
+{static}InitialTimeOp(ArrayList<ArrayList<String>> lines): ArrayList<Object>
}
class Commands {
+{static}Add(ArrayList<SmartDevices> smartDevices, ArrayList<String> list, CurrentTime time): void
+{static}Switch(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list, CurrentTime time): void
+{static}ChangeName(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list): void
+{static}Remove(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list, CurrentTime time): void
+{static}SetKelvin(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list): void
+{static}SetBrightness(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list): void
+{static}SetWhite(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list): void
+{static}SetColor(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list): void
+{static}SetColorCode(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list): void
+{static}PlugIn(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list, CurrentTime time): void
+{static}PlugOut(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list, CurrentTime time): void
+{static}SkipMinutes(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list, ArrayList<SmartDevices> switchedList, CurrentTime time): void
+{static}Report(String path, ArrayList<SmartDevices> smartDevices,ArrayList<SmartDevices> switchedList, CurrentTime time): void
+{static}SetSwitchTime(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list, ArrayList<SmartDevices> switchedList, CurrentTime time): void
+{static}SetInitialTime(String path, ArrayList<String> list): CurrentTime
+{static}SetTime(String path, ArrayList<SmartDevices> smartDevices, ArrayList<String> list, ArrayList<SmartDevices> switchedList, CurrentTime time): void
+{static}Nop(String path, ArrayList<SmartDevices> smartDevices, ArrayList<SmartDevices> switchedList, CurrentTime time): void
}
class ioOperations {
+{static}writer(String path, String content, boolean append, boolean newLine): void
+{static}reader(String path): String[]
}
class Main{
+{static}main(String[] args): void
}
@enduml